# eval-demo

./: README.md  app.py  evaluation.py  pyproject.toml  requirements.txt  test_app.py  test_langchain_evals.py
.github/workflows/: ci.yml
templates/: evaluate.html
