[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-demo"
version = "0.1.0"
description = "Evaluation demo project with Python environment and FastAPI server"
authors = [{name = "Devin AI", email = "devin-ai-integration[bot]@users.noreply.github.com"}]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "starlette>=0.46.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.8",
    "pytest>=7.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
